# ignite-843 Cleanup. Update caches.

--- a/modules/webconfig/nodejs/views/caches.jade
+++ b/modules/webconfig/nodejs/views/caches.jade
@@ -36,20 +36,30 @@ block content
         button(ng-click='createItem()' class=['btn', 'btn-primary'] ng-disabled='!create.template') &nbspAdd cache
         span(style='margin-left: 15px; margin-right: 5px') Use template:&nbsp
         button.btn.btn-default(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cache template' bs-options='item.value as item.label for item in templates' bs-select)
-        .row.col-sm-12
-            hr
+        hr
         form.form-horizontal(name='cachesForm' ng-if='backupItem')
-            h3 General
-            .settings-row(ng-repeat='field in general')
-                +form-row
-            .panel(bs-collapse data-start-collapsed='true')
+            div(bs-collapse data-start-collapsed='false')
+                .panel.panel-default
+                    .panel-heading
+                        h3
+                            a(bs-collapse-toggle) General
+                    .panel-collapse(bs-collapse-target)
+                        .panel-body
+                            .settings-row(ng-repeat='field in general')
+                                +form-row
+            div(bs-collapse data-start-collapsed='true')
                 .panel-collapse(bs-collapse-target)
-                    div(ng-repeat='group in advanced')
-                        h3 {{group.label}}
-                        .settings-row(ng-repeat='field in group.fields')
-                            +form-row
-                .panel-heading
-                    .panel-title
+                    .span(bs-collapse data-start-collapsed='true' data-allow-multiple='true')
+                        .panel.panel-default(ng-repeat='group in advanced')
+                            .panel-heading
+                                h3
+                                    a(bs-collapse-toggle) {{group.label}}
+                            .panel-collapse(bs-collapse-target)
+                                .panel-body
+                                    .settings-row(ng-repeat='field in group.fields')
+                                        +form-row
+                .panel-title
+                    h3
                         a(bs-collapse-toggle ng-init='expanded=false; lbl="Show advanced settings..."' ng-click='expanded = !expanded; lbl=expanded ? "Hide advanced settings... " : "Show advanced settings..."') {{lbl}}
-            button.btn.btn-primary(ng-click='saveItem()' ng-disabled='cachesForm.$invalid') Save
-            button.btn.btn-primary(ng-click='removeItem()' ng-show='backupItem._id') Remove
+            button.btn.btn-primary(ng-disabled='cachesForm.$invalid' ng-click='saveItem()') Save
+            button.btn.btn-primary(ng-show='backupItem._id' ng-click='removeItem()') Remove
