--- a/modules/webconfig/nodejs/views/clusters.jade
+++ b/modules/webconfig/nodejs/views/clusters.jade
@@ -38,7 +38,7 @@ block content
         button.btn.btn-default(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cluster template' bs-options='item.value as item.label for item in templates' bs-select)
         hr
         form.form-horizontal(name='clustersForm' ng-if='backupItem')
-            div(data-start-collapsed='false' bs-collapse)
+            div(bs-collapse data-start-collapsed='false')
                 .panel.panel-default
                     .panel-heading
                         h3
@@ -49,7 +49,7 @@ block content
                                 +form-row
             div(bs-collapse data-start-collapsed='true')
                 .panel-collapse(bs-collapse-target)
-                    .span(data-allow-multiple='true' aria-multiselectable='true' role='tablist' bs-collapse)
+                    .span(bs-collapse data-start-collapsed='true' data-allow-multiple='true')
                         .panel.panel-default(ng-repeat='group in advanced')
                             .panel-heading
                                 h3
@@ -61,5 +61,5 @@ block content
                 .panel-title
                     h3
                         a(bs-collapse-toggle ng-init='expanded=false; lbl="Show advanced settings..."' ng-click='expanded = !expanded; lbl=expanded ? "Hide advanced settings... " : "Show advanced settings..."') {{lbl}}
-            button.btn.btn-primary(ng-click='saveItem()' ng-disabled='clustersForm.$invalid') Save
-            button.btn.btn-primary(ng-click='removeItem()' ng-show='backupItem._id') Remove
+            button.btn.btn-primary(ng-disabled='clustersForm.$invalid' ng-click='saveItem()') Save
+            button.btn.btn-primary(ng-show='backupItem._id' ng-click='removeItem()') Remove
