--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -819,13 +819,13 @@ label {
   padding-right:4px;
 }
 
-.tip {
+.tipField {
   float: right;
   line-height: @input-height;
   margin-right: 18px;
 }
 
-.tipCheck {
+.tipLabel {
   margin-left: 4px;
 }
 
