--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -652,8 +652,13 @@ h1.ignite-logo {
   }
 
   input[type="checkbox"] {
-    margin-top: 8px;
+    line-height: 20px;
     margin-right: 4px;
+  }
+
+  .checkbox label {
+    line-height: 20px;
+    vertical-align: middle;
   }
 }
 
