--- a/modules/webconfig/nodejs/views/includes/controls.jade
+++ b/modules/webconfig/nodejs/views/includes/controls.jade
@@ -128,7 +128,7 @@ mixin form-row
                             td
                                 a(ng-click='editIndexedTypes($index)') {{$index + 1}}. {{idxType.keyClass}}, {{idxType.valueClass}}
                                 label.fa.fa-remove(ng-click='removeIndexedType($index)')
-        div(ng-switch-when='zzz' )
+        div(ng-switch-when='table-simple2' )
             div
                 label SQL functions: {{backupItem.sqlFunctionClasses.length}}
                 +tipLabel('field.tip')
@@ -143,9 +143,9 @@ mixin form-row
                                 i.tipField.fa.fa-remove(ng-show='field.editIdx != {{$index}}' ng-click='field.editIdx = -1; removeSqlFunction($index)')
                                 i.tipField.fa.fa-floppy-o(ng-show='field.editIdx == {{$index}}' ng-click='field.editIdx = -1; backupItem.sqlFunctionClasses[$index]=inplaceSqlFx')
                             td.col-sm-1
-                                i.fa.fa-arrow-up
-                                i.fa.fa-arrow-down
+                                i.fa.fa-arrow-up(ng-show='{{$index}} > 0' ng-click='field.editIdx = -1')
+                                i.fa.fa-arrow-down(ng-show='{{$index}} < #{sqlFunctions}.length - 1' ng-click='field.editIdx = -1')
             .col-sm-5
                 input.form-control(type='text' ng-model='newSqlFx' placeholder='SQL function class name')
-            button.btn.btn-primary(style='margin-left: 10px;' ng-click='addSqlFunction(newSqlFx)') Add SQL function
+            button.btn.btn-primary(style='margin-left: 10px;' ng-click='field.editIdx = -1; addSqlFunction(newSqlFx)') Add SQL function
 
