--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -797,6 +797,7 @@ button .caret {
 
 .panel-details {
   margin-top: 1.3em;
+  margin-bottom: 0.65em;
   padding: 0.65em;
 
   border-radius: 4px;
@@ -829,6 +830,11 @@ label {
   padding-right:4px;
 }
 
+.labelField {
+  float: left;
+  margin-right: 4px;
+}
+
 .tipField {
   float: right;
   line-height: @input-height;
@@ -859,8 +865,10 @@ label {
   cursor: pointer;
 }
 
-.required {
-  font-weight: bold;
+label.required:after {
+  color: #ec1c24;
+  content: ' *';
+  display:inline;
 }
 
 .blank {
